Added overflow:hidden to several containers to make them really contain things

--- a/Test_main.html
+++ b/Test_main.html
@@ -106,7 +106,43 @@
 			</div>
 		</div>
 		<div id="footer">
-			<h1>PARTNERS</h1>
+			<div id="subfooter">
+				<h1>PARTNERS</h1>
+				<div id="logos">
+					<div class="logo">
+						<a title="CREAF" href="#">
+							<img title="" alt="" src="images/creaf.jpg">
+						</a>
+					</div>
+					<div class="logo">
+						<a title="Collserola" href="#">
+							<img title="" alt="" src="images/collserola.jpg">
+						</a>
+					</div>
+					<div class="logo">
+						<a title="Can Balasc" href="#">
+							<img title="" alt="" src="images/can_balasc.jpg">
+						</a>
+					</div>
+				</div>
+			</div>			
+			<div id="mainfooter">
+				<div class="menu">
+					<ul>
+						<li><a>Home</a></li>
+						<li><a>Novedades</a></li>
+						<li><a>Agenda</a></li>
+						<li><a>El proyecto</a></li>
+						<li><a>Equipo</a></li>
+						<li class="last"><a>Contacto</a></li>
+					</ul>
+				</div>
+				<div class="logo">
+					<a title="Blog CREAF" href="http://blog.creaf.cat">
+						<img title="" alt="" src="images/creaf_blog.png">
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
